Pull request #31: AGRE-2967: Fixed behaviour of jquery modal in lower resolutions
Merge in ITX-BPV/openmrs-module-visits from feature/AGRE-2967 to development

Squashed commit of the following:

commit 04e02d40eae166bbe0b080f06238d5d36efa7eb3
Author: Piotr Wargulak <pwargulak@soldevelo.com>
Date:   Thu Jun 22 11:58:49 2023 +0200

    AGRE-2967: Fixed behaviour of jquery modal in lower resolutions

--- a/omod/src/main/webapp/resources/styles/visitsSection.css
+++ b/omod/src/main/webapp/resources/styles/visitsSection.css
@@ -1,10 +1,10 @@
+.simplemodal-wrap {
+  padding: 5em;
+}
+
 #edit-visit-dialog {
   display: none;
   width: 380px !important;
-  position: fixed;
-  z-index: 1000;
-  top: 100px;
-  left: 500px;
 }
 
 #edit-visit-dialog select {
